feat: Add extraction logic for key items, apricorns, experience candies, wings, and special items

--- a/new/items_manifest.json
+++ b/new/items_manifest.json
@@ -2762,5 +2762,554 @@
       "category": "ITEMMENU_NOUSE"
     },
     "locations": []
+  },
+  {
+    "id": "bicycle",
+    "name": "Bicycle",
+    "description": "A collapsible bike for fast movement.",
+    "attributes": {
+      "category": "ITEMMENU_CLOSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "oldrod",
+    "name": "Old Rod",
+    "description": "Use by water to fish for Pokemon.",
+    "attributes": {
+      "category": "ITEMMENU_CLOSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "goodrod",
+    "name": "Good Rod",
+    "description": "A good Rod for catching Pokemon.",
+    "attributes": {
+      "category": "ITEMMENU_CLOSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "superrod",
+    "name": "Super Rod",
+    "description": "The best Rod for catching Pokemon.",
+    "attributes": {
+      "category": "ITEMMENU_CLOSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "itemfinder",
+    "name": "Itemfinder",
+    "description": "Checks for unseen items in the area.",
+    "attributes": {
+      "category": "ITEMMENU_CLOSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "coincase",
+    "name": "Coin Case",
+    "description": "Holds up to 50K game coins.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "apricornbox",
+    "name": "Apricorn Box",
+    "description": "Holds up to 99 of each Apricorn.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "wingcase",
+    "name": "Wing Case",
+    "description": "Holds up to 999 of each Wing.",
+    "attributes": {
+      "category": "ITEMMENU_PARTY"
+    },
+    "locations": []
+  },
+  {
+    "id": "candyjar",
+    "name": "Candy Jar",
+    "description": "Holds up to 99 of each Exp.Candy.",
+    "attributes": {
+      "category": "ITEMMENU_PARTY"
+    },
+    "locations": []
+  },
+  {
+    "id": "typechart",
+    "name": "Type Chart",
+    "description": "Summarizes all type advantages.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "gbcsounds",
+    "name": "GBC Sounds",
+    "description": "A music player filled with songs.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "bluecard",
+    "name": "Blue Card",
+    "description": "Card to save points.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "squirtbottle",
+    "name": "SquirtBottle",
+    "description": "A bottle used for watering plants.",
+    "attributes": {
+      "category": "ITEMMENU_CLOSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "silphscope2",
+    "name": "SilphScope2",
+    "description": "A scope to see invisible Pokemon.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "mysteryegg",
+    "name": "Mystery Egg",
+    "description": "An Egg obtained from Mr.Pokemon.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "secretpotion",
+    "name": "SecretPotion",
+    "description": "Fully heals any Pokemon.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "gogoggles",
+    "name": "Go-Goggles",
+    "description": "Nifty goggles for sand or hail.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "redscale",
+    "name": "Red Scale",
+    "description": "A scale from the red Gyarados.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "cardkey",
+    "name": "Card Key",
+    "description": "Opens shutters in the Radio Tower.",
+    "attributes": {
+      "category": "ITEMMENU_CLOSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "basementkey",
+    "name": "Basement Key",
+    "description": "Opens doors.",
+    "attributes": {
+      "category": "ITEMMENU_CLOSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "lostitem",
+    "name": "Lost Item",
+    "description": "The # Doll lost by the Copycat.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "machinepart",
+    "name": "Machine Part",
+    "description": "A machine part for the Power Plant.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "rainbowwing",
+    "name": "Rainbow Wing",
+    "description": "A mystical feather of rainbow colors.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "silverwing",
+    "name": "Silver Wing",
+    "description": "A strange, silvercolored feather.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "clearbell",
+    "name": "Clear Bell",
+    "description": "Makes a gentle ringing.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "gsball",
+    "name": "GS Ball",
+    "description": "The mysterious Ball.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "ssticket",
+    "name": "S.S.Ticket",
+    "description": "A ticket for the S.S.Aqua.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "pass",
+    "name": "Pass",
+    "description": "A ticket for the Magnet Train.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "orangeticket",
+    "name": "OrangeTicket",
+    "description": "A ticket for the Seagallop Ferry.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "mysticticket",
+    "name": "MysticTicket",
+    "description": "A ticket for the Seagallop Ferry.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "oldseamap",
+    "name": "Old Sea Map",
+    "description": "A faded sea chart of a small island.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "liftkey",
+    "name": "Lift Key",
+    "description": "Operates the lift in a building.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "harshlure",
+    "name": "Harsh Lure",
+    "description": "A bottle with a cruel scent.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "potentlure",
+    "name": "Potent Lure",
+    "description": "A bottle with a strong smell.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "malignlure",
+    "name": "Malign Lure",
+    "description": "A bottle with a malevolent odor.",
+    "attributes": {
+      "category": "ITEMMENU_NOUSE"
+    },
+    "locations": []
+  },
+  {
+    "id": "shinycharm",
+    "name": "Shiny Charm",
+    "description": "A charm for finding shiny Pokemon.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "ovalcharm",
+    "name": "Oval Charm",
+    "description": "A charm for finding Eggs.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "catchcharm",
+    "name": "Catch Charm",
+    "description": "A charm for catching Pokemon.",
+    "attributes": {
+      "category": "ITEMMENU_CURRENT"
+    },
+    "locations": []
+  },
+  {
+    "id": "redapricorn",
+    "name": "Red Apricorn",
+    "description": "A red apricorn that can be used by Kurt to make Level Balls.",
+    "attributes": {
+      "category": "Berry"
+    },
+    "locations": []
+  },
+  {
+    "id": "bluapricorn",
+    "name": "Blu Apricorn",
+    "description": "A blue apricorn that can be used by Kurt to make Lure Balls.",
+    "attributes": {
+      "category": "Berry"
+    },
+    "locations": []
+  },
+  {
+    "id": "ylwapricorn",
+    "name": "Ylw Apricorn",
+    "description": "A yellow apricorn that can be used by Kurt to make Moon Balls.",
+    "attributes": {
+      "category": "Berry"
+    },
+    "locations": []
+  },
+  {
+    "id": "grnapricorn",
+    "name": "Grn Apricorn",
+    "description": "A green apricorn that can be used by Kurt to make Friend Balls.",
+    "attributes": {
+      "category": "Berry"
+    },
+    "locations": []
+  },
+  {
+    "id": "whtapricorn",
+    "name": "Wht Apricorn",
+    "description": "A white apricorn that can be used by Kurt to make Fast Balls.",
+    "attributes": {
+      "category": "Berry"
+    },
+    "locations": []
+  },
+  {
+    "id": "blkapricorn",
+    "name": "Blk Apricorn",
+    "description": "A black apricorn that can be used by Kurt to make Heavy Balls.",
+    "attributes": {
+      "category": "Berry"
+    },
+    "locations": []
+  },
+  {
+    "id": "pnkapricorn",
+    "name": "Pnk Apricorn",
+    "description": "A pink apricorn that can be used by Kurt to make Love Balls.",
+    "attributes": {
+      "category": "Berry"
+    },
+    "locations": []
+  },
+  {
+    "id": "expcandyxs",
+    "name": "Exp.Candy XS",
+    "description": "Increases a Pokémon's Exp. Points by 100.",
+    "attributes": {
+      "category": "CANDY"
+    },
+    "locations": []
+  },
+  {
+    "id": "expcandys",
+    "name": "Exp.Candy S",
+    "description": "Increases a Pokémon's Exp. Points by 800.",
+    "attributes": {
+      "category": "CANDY"
+    },
+    "locations": []
+  },
+  {
+    "id": "expcandym",
+    "name": "Exp.Candy M",
+    "description": "Increases a Pokémon's Exp. Points by 3000.",
+    "attributes": {
+      "category": "CANDY"
+    },
+    "locations": []
+  },
+  {
+    "id": "expcandyl",
+    "name": "Exp.Candy L",
+    "description": "Increases a Pokémon's Exp. Points by 10000.",
+    "attributes": {
+      "category": "CANDY"
+    },
+    "locations": []
+  },
+  {
+    "id": "expcandyxl",
+    "name": "Exp.Candy XL",
+    "description": "Increases a Pokémon's Exp. Points by 30000.",
+    "attributes": {
+      "category": "CANDY"
+    },
+    "locations": []
+  },
+  {
+    "id": "healthwing",
+    "name": "Health Wing",
+    "description": "Slightly increases a Pokémon's HP base points.",
+    "attributes": {
+      "category": "Medicine"
+    },
+    "locations": []
+  },
+  {
+    "id": "musclewing",
+    "name": "Muscle Wing",
+    "description": "Slightly increases a Pokémon's Attack base points.",
+    "attributes": {
+      "category": "Medicine"
+    },
+    "locations": []
+  },
+  {
+    "id": "resistwing",
+    "name": "Resist Wing",
+    "description": "Slightly increases a Pokémon's Defense base points.",
+    "attributes": {
+      "category": "Medicine"
+    },
+    "locations": []
+  },
+  {
+    "id": "swiftwing",
+    "name": "Swift Wing",
+    "description": "Slightly increases a Pokémon's Speed base points.",
+    "attributes": {
+      "category": "Medicine"
+    },
+    "locations": []
+  },
+  {
+    "id": "geniuswing",
+    "name": "Genius Wing",
+    "description": "Slightly increases a Pokémon's Sp. Attack base points.",
+    "attributes": {
+      "category": "Medicine"
+    },
+    "locations": []
+  },
+  {
+    "id": "cleverwing",
+    "name": "Clever Wing",
+    "description": "Slightly increases a Pokémon's Sp. Defense base points.",
+    "attributes": {
+      "category": "Medicine"
+    },
+    "locations": []
+  },
+  {
+    "id": "pokedex",
+    "name": "Pokédex",
+    "description": "A high-tech encyclopedia of Pokémon.",
+    "attributes": {
+      "category": "KEY"
+    },
+    "locations": []
+  },
+  {
+    "id": "mapcard",
+    "name": "Map Card",
+    "description": "A card that shows your location.",
+    "attributes": {
+      "category": "KEY"
+    },
+    "locations": []
+  },
+  {
+    "id": "radiocard",
+    "name": "Radio Card",
+    "description": "A card that enables radio programs.",
+    "attributes": {
+      "category": "KEY"
+    },
+    "locations": []
+  },
+  {
+    "id": "expncard",
+    "name": "Expn.Card",
+    "description": "A card that expands radio programs.",
+    "attributes": {
+      "category": "KEY"
+    },
+    "locations": []
+  },
+  {
+    "id": "pokegear",
+    "name": "Pokégear",
+    "description": "A multifunctional device.",
+    "attributes": {
+      "category": "KEY"
+    },
+    "locations": []
   }
 ]
