feat: add Dudunsparce with detailed forms and movesets; update trainer and manifest files

--- a/new/pokemon_manifest.json
+++ b/new/pokemon_manifest.json
@@ -544,9 +544,6 @@
             "poison"
           ]
         },
-        "johto": {
-          "types": []
-        },
         "kanto": {
           "types": [
             "poison"
@@ -573,9 +570,6 @@
           "types": [
             "poison"
           ]
-        },
-        "johto": {
-          "types": []
         },
         "kanto": {
           "types": [
@@ -5168,9 +5162,6 @@
             "psychic"
           ]
         },
-        "a": {
-          "types": []
-        },
         "b": {
           "types": [
             "psychic"
@@ -5312,9 +5303,6 @@
           "types": [
             "psychic"
           ]
-        },
-        "a": {
-          "types": []
         },
         "b": {
           "types": [
@@ -7359,18 +7347,34 @@
     }
   },
   {
-    "id": "dudunsparc",
-    "name": "Dudunsparc",
+    "id": "dudunsparce",
+    "name": "Dudunsparce",
     "dexNo": 286,
     "versions": {
       "polished": {
         "plain": {
-          "types": []
+          "types": [
+            "normal",
+            "dragon"
+          ]
+        },
+        "threesegment": {
+          "types": [
+            "normal",
+            "dragon"
+          ]
         }
       },
       "faithful": {
         "plain": {
-          "types": []
+          "types": [
+            "normal"
+          ]
+        },
+        "threesegment": {
+          "types": [
+            "normal"
+          ]
         }
       }
     }
