--- a/new/trainer_manifest.json
+++ b/new/trainer_manifest.json
@@ -2838,16 +2838,16 @@
     "constantName": "KUKUI"
   },
   {
-    "id": "lyra2",
-    "name": "Pokémon Trainer Lyra",
-    "class": "LYRA2",
-    "constantName": "LYRA2"
-  },
-  {
-    "id": "lyra1",
+    "id": "lyra",
     "name": "Pokémon Trainer Lyra",
     "class": "LYRA1",
-    "constantName": "LYRA1"
+    "constantName": "LYRA"
+  },
+  {
+    "id": "lyra",
+    "name": "Pokémon Trainer Lyra",
+    "class": "LYRA2",
+    "constantName": "LYRA"
   },
   {
     "id": "marley",
@@ -3000,16 +3000,16 @@
     "constantName": "RICH_BOY_WINSTON"
   },
   {
-    "id": "rival2",
+    "id": "rival",
     "name": "Rival RIVAL",
     "class": "RIVAL2",
-    "constantName": "RIVAL2"
+    "constantName": "RIVAL"
   },
   {
-    "id": "rival1",
+    "id": "rival",
     "name": "Rival RIVAL",
     "class": "RIVAL1",
-    "constantName": "RIVAL1"
+    "constantName": "RIVAL"
   },
   {
     "id": "steven",
@@ -3558,10 +3558,10 @@
     "constantName": "SR_AND_JR_JOANDCATH"
   },
   {
-    "id": "rival0",
+    "id": "rival",
     "name": "Strange boy",
     "class": "RIVAL0",
-    "constantName": "RIVAL0"
+    "constantName": "RIVAL"
   },
   {
     "id": "imakuni",
