Add rival2 trainer data and improve utility functions
- Added new trainer data for RIVAL2 in JSON format, including multiple match teams and Pokémon configurations.
- Removed debug logging from the location extraction script to clean up output.
- Enhanced the `removeNumericSuffix` utility function to optionally trim only underscores, improving flexibility in handling constant names.
- Updated the trainer constant name creation to utilize the new functionality for better consistency.

--- a/new/trainer_manifest.json
+++ b/new/trainer_manifest.json
@@ -2838,16 +2838,16 @@
     "constantName": "KUKUI"
   },
   {
-    "id": "lyra",
+    "id": "lyra1",
     "name": "Pokémon Trainer Lyra",
     "class": "LYRA1",
-    "constantName": "LYRA"
+    "constantName": "LYRA1"
   },
   {
-    "id": "lyra",
+    "id": "lyra2",
     "name": "Pokémon Trainer Lyra",
     "class": "LYRA2",
-    "constantName": "LYRA"
+    "constantName": "LYRA2"
   },
   {
     "id": "marley",
@@ -3000,16 +3000,16 @@
     "constantName": "RICH_BOY_WINSTON"
   },
   {
-    "id": "rival",
+    "id": "rival2",
     "name": "Rival RIVAL",
     "class": "RIVAL2",
-    "constantName": "RIVAL"
+    "constantName": "RIVAL2"
   },
   {
-    "id": "rival",
+    "id": "rival1",
     "name": "Rival RIVAL",
     "class": "RIVAL1",
-    "constantName": "RIVAL"
+    "constantName": "RIVAL1"
   },
   {
     "id": "steven",
@@ -3558,10 +3558,10 @@
     "constantName": "SR_AND_JR_JOANDCATH"
   },
   {
-    "id": "rival",
+    "id": "rival0",
     "name": "Strange boy",
     "class": "RIVAL0",
-    "constantName": "RIVAL"
+    "constantName": "RIVAL0"
   },
   {
     "id": "imakuni",
