--- a/new/pokemon/happiny.json
+++ b/new/pokemon/happiny.json
@@ -99,7 +99,12 @@
               "zenheadbutt"
             ],
             "eggMoves": [
-              "healbell"
+              "agility",
+              "batonpass",
+              "metalclaw",
+              "wingattack",
+              "counter",
+              "nightslash"
             ]
           }
         }
@@ -201,7 +206,12 @@
               "zenheadbutt"
             ],
             "eggMoves": [
-              "healbell"
+              "agility",
+              "batonpass",
+              "metalclaw",
+              "wingattack",
+              "counter",
+              "nightslash"
             ]
           }
         }
