--- a/new/pokemon/sneasel.json
+++ b/new/pokemon/sneasel.json
@@ -145,13 +145,12 @@
               "swagger"
             ],
             "eggMoves": [
-              "bite",
-              "foresight",
-              "pursuit",
+              "agility",
+              "batonpass",
+              "metalclaw",
+              "wingattack",
               "counter",
-              "reflect",
-              "iciclecrash",
-              "iceshard"
+              "nightslash"
             ]
           }
         },
@@ -297,13 +296,12 @@
               "swagger"
             ],
             "eggMoves": [
-              "bite",
-              "foresight",
-              "pursuit",
+              "agility",
+              "batonpass",
+              "metalclaw",
+              "wingattack",
               "counter",
-              "reflect",
-              "iciclecrash",
-              "iceshard"
+              "nightslash"
             ]
           }
         }
@@ -451,13 +449,12 @@
               "swagger"
             ],
             "eggMoves": [
-              "bite",
-              "foresight",
-              "pursuit",
+              "agility",
+              "batonpass",
+              "metalclaw",
+              "wingattack",
               "counter",
-              "reflect",
-              "iciclecrash",
-              "iceshard"
+              "nightslash"
             ]
           }
         },
@@ -603,13 +600,12 @@
               "swagger"
             ],
             "eggMoves": [
-              "bite",
-              "foresight",
-              "pursuit",
+              "agility",
+              "batonpass",
+              "metalclaw",
+              "wingattack",
               "counter",
-              "reflect",
-              "iciclecrash",
-              "iceshard"
+              "nightslash"
             ]
           }
         }
