update evolution chain + split file logic

--- a/new/pokemon/jynx.json
+++ b/new/pokemon/jynx.json
@@ -154,7 +154,10 @@
               "trickroom",
               "zenheadbutt"
             ],
-            "eggMoves": []
+            "eggMoves": [
+              "bulkup",
+              "nastyplot"
+            ]
           }
         }
       }
