update evolution extraction

--- a/new/pokemon/happiny.json
+++ b/new/pokemon/happiny.json
@@ -99,12 +99,7 @@
               "zenheadbutt"
             ],
             "eggMoves": [
-              "agility",
-              "batonpass",
-              "metalclaw",
-              "wingattack",
-              "counter",
-              "nightslash"
+              "healbell"
             ]
           }
         }
@@ -206,12 +201,7 @@
               "zenheadbutt"
             ],
             "eggMoves": [
-              "agility",
-              "batonpass",
-              "metalclaw",
-              "wingattack",
-              "counter",
-              "nightslash"
+              "healbell"
             ]
           }
         }
