--- a/new/pokemon/sneasel.json
+++ b/new/pokemon/sneasel.json
@@ -145,12 +145,13 @@
               "swagger"
             ],
             "eggMoves": [
-              "agility",
-              "batonpass",
-              "metalclaw",
-              "wingattack",
+              "bite",
+              "foresight",
+              "pursuit",
               "counter",
-              "nightslash"
+              "reflect",
+              "iciclecrash",
+              "iceshard"
             ]
           }
         },
@@ -296,12 +297,13 @@
               "swagger"
             ],
             "eggMoves": [
-              "agility",
-              "batonpass",
-              "metalclaw",
-              "wingattack",
+              "bite",
+              "foresight",
+              "pursuit",
               "counter",
-              "nightslash"
+              "reflect",
+              "iciclecrash",
+              "iceshard"
             ]
           }
         }
@@ -449,12 +451,13 @@
               "swagger"
             ],
             "eggMoves": [
-              "agility",
-              "batonpass",
-              "metalclaw",
-              "wingattack",
+              "bite",
+              "foresight",
+              "pursuit",
               "counter",
-              "nightslash"
+              "reflect",
+              "iciclecrash",
+              "iceshard"
             ]
           }
         },
@@ -600,12 +603,13 @@
               "swagger"
             ],
             "eggMoves": [
-              "agility",
-              "batonpass",
-              "metalclaw",
-              "wingattack",
+              "bite",
+              "foresight",
+              "pursuit",
               "counter",
-              "nightslash"
+              "reflect",
+              "iciclecrash",
+              "iceshard"
             ]
           }
         }
