--- a/new/pokemon/sneasler.json
+++ b/new/pokemon/sneasler.json
@@ -149,7 +149,15 @@
               "sleeptalk",
               "swagger"
             ],
-            "eggMoves": []
+            "eggMoves": [
+              "bite",
+              "foresight",
+              "pursuit",
+              "counter",
+              "reflect",
+              "iciclecrash",
+              "iceshard"
+            ]
           }
         }
       }
@@ -300,7 +308,15 @@
               "sleeptalk",
               "swagger"
             ],
-            "eggMoves": []
+            "eggMoves": [
+              "bite",
+              "foresight",
+              "pursuit",
+              "counter",
+              "reflect",
+              "iciclecrash",
+              "iceshard"
+            ]
           }
         }
       }
