Refactor item and location data loaders to utilize new manifest system
- Updated item data loader to load detailed item data and enrich location information.
- Integrated location data loading from the new manifest structure, improving data access and error handling.
- Removed deprecated caching mechanisms and streamlined data retrieval processes.
- Enhanced error logging for better debugging and maintenance.

--- a/new/items_manifest.json
+++ b/new/items_manifest.json
@@ -1685,13 +1685,13 @@
     "versions": {
       "polished": {
         "name": "X Attack",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 10,
         "price": 1000
       },
       "faithful": {
         "name": "X Attack",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 10,
         "price": 1000
       }
@@ -1702,13 +1702,13 @@
     "versions": {
       "polished": {
         "name": "X Defend",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 8,
         "price": 2000
       },
       "faithful": {
         "name": "X Defend",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 8,
         "price": 2000
       }
@@ -1719,13 +1719,13 @@
     "versions": {
       "polished": {
         "name": "X Speed",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 6,
         "price": 1000
       },
       "faithful": {
         "name": "X Speed",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 6,
         "price": 1000
       }
@@ -1736,13 +1736,13 @@
     "versions": {
       "polished": {
         "name": "X Sp.Atk",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 7,
         "price": 1000
       },
       "faithful": {
         "name": "X Sp.Atk",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 7,
         "price": 1000
       }
@@ -1753,13 +1753,13 @@
     "versions": {
       "polished": {
         "name": "X Sp.Def",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 6,
         "price": 2000
       },
       "faithful": {
         "name": "X Sp.Def",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 6,
         "price": 2000
       }
@@ -1770,13 +1770,13 @@
     "versions": {
       "polished": {
         "name": "X Accuracy",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 5,
         "price": 1000
       },
       "faithful": {
         "name": "X Accuracy",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 5,
         "price": 1000
       }
@@ -1787,13 +1787,13 @@
     "versions": {
       "polished": {
         "name": "Dire Hit",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 7,
         "price": 1000
       },
       "faithful": {
         "name": "Dire Hit",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 7,
         "price": 1000
       }
@@ -1804,13 +1804,13 @@
     "versions": {
       "polished": {
         "name": "Guard Stats",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 3,
         "price": 1500
       },
       "faithful": {
         "name": "Guard Spec.",
-        "category": "item",
+        "category": "battleitem",
         "locationCount": 3,
         "price": 1500
       }
@@ -1855,13 +1855,13 @@
     "versions": {
       "polished": {
         "name": "Leaf Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 5,
         "price": 3000
       },
       "faithful": {
         "name": "Leaf Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 5,
         "price": 3000
       }
@@ -1872,13 +1872,13 @@
     "versions": {
       "polished": {
         "name": "Fire Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 4,
         "price": 3000
       },
       "faithful": {
         "name": "Fire Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 4,
         "price": 3000
       }
@@ -1889,13 +1889,13 @@
     "versions": {
       "polished": {
         "name": "Water Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 5,
         "price": 3000
       },
       "faithful": {
         "name": "Water Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 5,
         "price": 3000
       }
@@ -1906,13 +1906,13 @@
     "versions": {
       "polished": {
         "name": "ThunderStone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 4,
         "price": 3000
       },
       "faithful": {
         "name": "ThunderStone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 4,
         "price": 3000
       }
@@ -1923,13 +1923,13 @@
     "versions": {
       "polished": {
         "name": "Ice Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 2,
         "price": 3000
       },
       "faithful": {
         "name": "Ice Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 2,
         "price": 3000
       }
@@ -1940,13 +1940,13 @@
     "versions": {
       "polished": {
         "name": "Moon Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 11,
         "price": 3000
       },
       "faithful": {
         "name": "Moon Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 11,
         "price": 3000
       }
@@ -1957,13 +1957,13 @@
     "versions": {
       "polished": {
         "name": "Sun Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 2,
         "price": 3000
       },
       "faithful": {
         "name": "Sun Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 2,
         "price": 3000
       }
@@ -1974,13 +1974,13 @@
     "versions": {
       "polished": {
         "name": "Dusk Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 8,
         "price": 3000
       },
       "faithful": {
         "name": "Dusk Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 8,
         "price": 3000
       }
@@ -1991,13 +1991,13 @@
     "versions": {
       "polished": {
         "name": "Shiny Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 5,
         "price": 3000
       },
       "faithful": {
         "name": "Shiny Stone",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 5,
         "price": 3000
       }
@@ -3791,13 +3791,13 @@
     "versions": {
       "polished": {
         "name": "Linking Cord",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 3,
         "price": 3000
       },
       "faithful": {
         "name": "Linking Cord",
-        "category": "item",
+        "category": "evolutionitem",
         "locationCount": 3,
         "price": 3000
       }
