refactor: add pokemonHnS submodule and update .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "polishedcrystal"]
 	path = polishedcrystal
 	url = https://github.com/Rangi42/polishedcrystal.git
+[submodule "pokemonHnS"]
+	path = pokemonHnS
+	url = https://github.com/PokemonHnS-Development/pokemonHnS.git
