extract new data from updated rom

--- a/public/sprite_manifest.json
+++ b/public/sprite_manifest.json
@@ -8383,24 +8383,24 @@
     },
     "gengar": {
       "normal_animated": {
-        "height": 56,
+        "height": 48,
         "url": "sprites/pokemon/gengar/normal_front_animated.gif",
-        "width": 56
+        "width": 48
       },
       "normal_front": {
-        "height": 56,
+        "height": 48,
         "url": "sprites/pokemon/gengar/normal_front.png",
-        "width": 56
+        "width": 48
       },
       "shiny_animated": {
-        "height": 56,
+        "height": 48,
         "url": "sprites/pokemon/gengar/shiny_front_animated.gif",
-        "width": 56
+        "width": 48
       },
       "shiny_front": {
-        "height": 56,
+        "height": 48,
         "url": "sprites/pokemon/gengar/shiny_front.png",
-        "width": 56
+        "width": 48
       }
     },
     "geodude": {
@@ -16640,6 +16640,46 @@
       "kimono_girl_8": {
         "height": 56,
         "url": "sprites/trainers/kimono_girl/kimono_girl_8.png",
+        "width": 56
+      },
+      "kimono_girl_ami": {
+        "height": 56,
+        "url": "sprites/trainers/kimono_girl/kimono_girl_ami.png",
+        "width": 56
+      },
+      "kimono_girl_kuni": {
+        "height": 56,
+        "url": "sprites/trainers/kimono_girl/kimono_girl_kuni.png",
+        "width": 56
+      },
+      "kimono_girl_mako": {
+        "height": 56,
+        "url": "sprites/trainers/kimono_girl/kimono_girl_mako.png",
+        "width": 56
+      },
+      "kimono_girl_miki": {
+        "height": 56,
+        "url": "sprites/trainers/kimono_girl/kimono_girl_miki.png",
+        "width": 56
+      },
+      "kimono_girl_mina": {
+        "height": 56,
+        "url": "sprites/trainers/kimono_girl/kimono_girl_mina.png",
+        "width": 56
+      },
+      "kimono_girl_naoko": {
+        "height": 56,
+        "url": "sprites/trainers/kimono_girl/kimono_girl_naoko.png",
+        "width": 56
+      },
+      "kimono_girl_sayo": {
+        "height": 56,
+        "url": "sprites/trainers/kimono_girl/kimono_girl_sayo.png",
+        "width": 56
+      },
+      "kimono_girl_zuki": {
+        "height": 56,
+        "url": "sprites/trainers/kimono_girl/kimono_girl_zuki.png",
         "width": 56
       }
     },
