refactor: add sprite assets for Magikarp and Pichu variants, including spiky-eared form

--- a/public/sprite_manifest.json
+++ b/public/sprite_manifest.json
@@ -16374,6 +16374,28 @@
         "width": 48
       }
     },
+    "magikarp": {
+      "normal_animated": {
+        "height": 48,
+        "url": "sprites/pokemon/magikarp/normal_front_animated.gif",
+        "width": 48
+      },
+      "normal_front": {
+        "height": 48,
+        "url": "sprites/pokemon/magikarp/normal_front.png",
+        "width": 48
+      },
+      "shiny_animated": {
+        "height": 48,
+        "url": "sprites/pokemon/magikarp/shiny_front_animated.gif",
+        "width": 48
+      },
+      "shiny_front": {
+        "height": 48,
+        "url": "sprites/pokemon/magikarp/shiny_front.png",
+        "width": 48
+      }
+    },
     "magmar": {
       "normal_animated": {
         "height": 48,
@@ -17606,6 +17628,50 @@
         "width": 40
       }
     },
+    "pichu": {
+      "normal_animated": {
+        "height": 40,
+        "url": "sprites/pokemon/pichu/normal_front_animated.gif",
+        "width": 40
+      },
+      "normal_front": {
+        "height": 40,
+        "url": "sprites/pokemon/pichu/normal_front.png",
+        "width": 40
+      },
+      "shiny_animated": {
+        "height": 40,
+        "url": "sprites/pokemon/pichu/shiny_front_animated.gif",
+        "width": 40
+      },
+      "shiny_front": {
+        "height": 40,
+        "url": "sprites/pokemon/pichu/shiny_front.png",
+        "width": 40
+      }
+    },
+    "pichu_spikyeared": {
+      "normal_animated": {
+        "height": 40,
+        "url": "sprites/pokemon/pichu_spikyeared/normal_front_animated.gif",
+        "width": 40
+      },
+      "normal_front": {
+        "height": 40,
+        "url": "sprites/pokemon/pichu_spikyeared/normal_front.png",
+        "width": 40
+      },
+      "shiny_animated": {
+        "height": 40,
+        "url": "sprites/pokemon/pichu_spikyeared/shiny_front_animated.gif",
+        "width": 40
+      },
+      "shiny_front": {
+        "height": 40,
+        "url": "sprites/pokemon/pichu_spikyeared/shiny_front.png",
+        "width": 40
+      }
+    },
     "pidgeot": {
       "normal_animated": {
         "height": 56,
@@ -17670,6 +17736,138 @@
         "height": 40,
         "url": "sprites/pokemon/pidgey/shiny_front.png",
         "width": 40
+      }
+    },
+    "pikachu": {
+      "normal_animated": {
+        "height": 40,
+        "url": "sprites/pokemon/pikachu/normal_front_animated.gif",
+        "width": 40
+      },
+      "normal_front": {
+        "height": 40,
+        "url": "sprites/pokemon/pikachu/normal_front.png",
+        "width": 40
+      },
+      "shiny_animated": {
+        "height": 40,
+        "url": "sprites/pokemon/pikachu/shiny_front_animated.gif",
+        "width": 40
+      },
+      "shiny_front": {
+        "height": 40,
+        "url": "sprites/pokemon/pikachu/shiny_front.png",
+        "width": 40
+      }
+    },
+    "pikachu_fly": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_fly/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_fly/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_fly/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_fly/shiny_front.png",
+        "width": 56
+      }
+    },
+    "pikachu_red": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_red/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_red/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_red/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_red/shiny_front.png",
+        "width": 56
+      }
+    },
+    "pikachu_spark": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_spark/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_spark/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_spark/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_spark/shiny_front.png",
+        "width": 56
+      }
+    },
+    "pikachu_surf": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_surf/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_surf/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_surf/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_surf/shiny_front.png",
+        "width": 56
+      }
+    },
+    "pikachu_yellow": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_yellow/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_yellow/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_yellow/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_yellow/shiny_front.png",
+        "width": 56
       }
     },
     "piloswine": {
